@@ -13,15 +13,9 @@ import com.fincatto.documentofiscal.utils.DFSoapFaultException;
 import com.fincatto.documentofiscal.validadores.DFXMLValidador;
 import org.apache.commons.lang3.StringUtils;
 
-import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.security.KeyManagementException;
-import java.security.KeyStoreException;
-import java.security.NoSuchAlgorithmException;
-import java.security.UnrecoverableKeyException;
 import java.util.Base64;
 import java.util.zip.GZIPInputStream;
 
@@ -38,7 +32,7 @@ public class WSDistribuicaoCTe {
     private static final int NIVEIS_DE_WRAPPER_NA_RESPOSTA = 2;
 
     private final CTeConfig config;
-    private DFHttpClient httpClient;
+    private final DFHttpClient httpClient;
 
     public WSDistribuicaoCTe(final CTeConfig config, final DFHttpClient httpClient) {
         this.config = config;
@@ -60,8 +54,7 @@ public class WSDistribuicaoCTe {
      * {@code WSDistribuicaoNFe#efetuaConsulta}: o wrapper e {@code cteDistDFeInteresse} (nao
      * {@code cteDadosMsg} direto), com {@code cteDadosMsg} dentro dele.
      */
-    private String efetuaConsulta(final String xmlEnvio)
-            throws IOException, DFSoapFaultException, KeyManagementException, UnrecoverableKeyException, KeyStoreException, NoSuchAlgorithmException {
+    private String efetuaConsulta(final String xmlEnvio) throws IOException, DFSoapFaultException {
         final String endpoint = CTAutorizador.AN.getDistribuicaoDFe(this.config.getAmbiente());
         if (endpoint == null) {
             throw new IllegalArgumentException("Nao foi possivel encontrar URL para DistribuicaoDFe, autorizador " + CTAutorizador.AN.name());
@@ -96,17 +89,10 @@ public class WSDistribuicaoCTe {
         if (conteudoEncode == null || conteudoEncode.length() == 0) {
             return "";
         }
-        final byte[] conteudo = Base64.getDecoder().decode(conteudoEncode);//java 8
-        //final byte[] conteudo = DatatypeConverter.parseBase64Binary(conteudoEncode);//java 7
+        final byte[] conteudo = Base64.getDecoder().decode(conteudoEncode);
+        // le os bytes crus (sem readLine), preservando quebras de linha dentro de campos texto do XML
         try (GZIPInputStream gis = new GZIPInputStream(new ByteArrayInputStream(conteudo))) {
-            try (BufferedReader bf = new BufferedReader(new InputStreamReader(gis, StandardCharsets.UTF_8))) {
-                StringBuilder outStr = new StringBuilder();
-                String line;
-                while ((line = bf.readLine()) != null) {
-                    outStr.append(line);
-                }
-                return outStr.toString();
-            }
+            return new String(gis.readAllBytes(), StandardCharsets.UTF_8);
         }
     }
 }
